stave-macros/tests/fail/methods_sets_unknown_field.rs
use stave_macros::{builder, methods};

#[builder]
struct Widget {
    #[stave(required)]
    name: String,
}

#[methods]
impl Widget {
    #[sets(missing)]
    fn go(self) -> String {
        String::new()
    }
}

fn main() {}
