stave-macros/tests/fail/methods_sets_unknown_field.stderr
error: `missing` is not a field of this struct
  --> tests/fail/methods_sets_unknown_field.rs:11:12
   |
11 |     #[sets(missing)]
   |            ^^^^^^^
